--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-node_modules
-node_modules
+# Ignore development-related files
+node_modules/
+build/
+dist/
+
+# Exclude sensitive information
+.env
+
+# Exclude IDE-specific files
+.vscode/
+.idea/
